--- a/css/theme.css
+++ b/css/theme.css
@@ -84,6 +84,7 @@ h3 {
 }
 /* other stuff */
 .item-list {
+    width: 400px;
 }
 .item-list .odd {
     background-color: #E6F2FF;
@@ -96,9 +97,8 @@ h3 {
     padding-left:25px;
 }
 .expand-folder a {
-    text-align: right;
-    font-weight: bold;
-    padding-right: 5px;
+    float: right;
+    padding: 5px;
 }
 .file-image {
     float:right;
@@ -172,4 +172,21 @@ textarea {
 .info a {
     color:#205791;
 }
-
+.changelog {
+    margin-left: 30px;
+    font-family: monospace;
+}
+.todo-list li {
+    margin-left: 50px;
+    padding-bottom: 4px;
+}
+.empty-page {
+    margin-top: 10%;
+    font-style: italic;
+    text-align: center;
+    font-size: 125%;
+}
+.public-msg {
+    color: green;
+    font-style: italic;
+}
