--- a/css/theme.css
+++ b/css/theme.css
@@ -192,3 +192,9 @@ textarea {
 #content h1 {
     border-bottom: 1px solid #347498;
 }
+#loader-image {
+    vertical-align: middle;
+    padding-left: 20px;
+    padding-bottom: 4px;
+    display: none;
+}
