--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,22 +1,20 @@
-@media handheld {
-	html, body {
-		font: 12px/15px sans-serif;
-		background: #fff;
-		padding: 3px;
-		color: #000;
-		margin: 0;
-    }
-	h1, h2, h3 {
-		font-weight: normal;
-    }
-	#content img {
-		max-width: 250px;
-    }
-	.center {
-		width: 100% !important;
-		text-align: center;
-    }
-    .footer {
-        display: none;
-    }
+html, body {
+	font: 1zpx/15px sans-serif;
+	background: #fff;
+	padding: 3px;
+	color: #000;
+	margin: 0;
+}
+h1, h2, h3 {
+	font-weight: normal;
+}
+#content img {
+	max-width: 250px;
+}
+.center {
+	width: 100% !important;
+	text-align: center;
+}
+#footer {
+    display: none;
 }
